policy/container-deny-escalation/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: containerdenyescalation
spec:
  crd:
    spec:
      names:
        kind: ContainerDenyEscalation
  targets:
  - libs:
    - |-
      package k8s

      default is_gatekeeper = false

      has_field(obj, field) {
        not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
      }

      missing_field(obj, field) {
        obj[field] == ""
      }

      missing_field(obj, field) {
        not has_field(obj, field)
      }

      is_gatekeeper {
        has_field(input, "review")
        has_field(input.review, "object")
      }

      resource = input.review.object {
        is_gatekeeper
      }

      resource = input {
        not is_gatekeeper
      }

      parameters = data.parameters {
        not is_gatekeeper
      }

      parameters = input.parameters {
        is_gatekeeper
      }

      input_containers[c] {
        c := resource.spec.containers[_]
      }

      input_containers[c] {
        c := resource.spec.initContainers[_]
      }

      input_containers[c] {
        c := resource.spec.template.spec.containers[_]
      }

      input_containers[c] {
        c := resource.spec.template.spec.initContainers[_]
      }

      contains_label(labels, label) {
        labels[_] == label
        #labels[_].value == label.allowedvalue
      } else = false {
        true
      }

      not_contains_label(labels, label) {
        not contains_label(labels, label)
      }

      definedLabels := {[label, value] | some label; value := resource.metadata.labels[label]}

      allowedLabels := {[label, value] | some index; label := parameters.labels[index].key; value := parameters.labels[index].allowedvalue}
    rego: |-
      package container_deny_escalation

      import data.k8s

      violation[{"msg": msg, "details": {}}] {
        c := k8s.input_containers[_]
        c.securityContext.privileged
        msg := sprintf("Privileged container is not allowed: %v, securityContext: %v", [c.name, c.securityContext])
      }
    target: admission.k8s.gatekeeper.sh
status: {}
